Fixed vertical alignments on mobile

--- a/src/pages/Weather/Weather.css
+++ b/src/pages/Weather/Weather.css
@@ -8,7 +8,7 @@
     padding-bottom: 20px;
 }
 
-.ForecastList {
+.ForecastTableElement {
     display: flex;
     background-color: lightblue;
     margin: 15px;
@@ -24,7 +24,8 @@
 }
 
 .ForecastIconAndText {
-    display: flex;
+    display: inline-flex;
+    align-items: center;
 }
 
 .Period {
@@ -32,7 +33,8 @@
 }
 
 .WeatherIcon {
-    border-radius: 1em;
+    vertical-align: middle;
+    border-radius: 20px;
     margin-left: 35px;
     margin-right: 1em;
     margin-top: 4px;
@@ -41,6 +43,8 @@
 }
 
 .Temperature {
+    display: inline-flex;
+    align-items: center;
     font-size: xx-large;
     margin-right: 1em;
     white-space: nowrap;
